Bug 1947143 - Reset InputConnection when any input properties are changed. r=geckoview-reviewers,ohall

We avoid to reset `InputConnection` not to erase IME's composing text
for some situations such as `element.focus()` call.

When changing inputmdoe during user interaction, we should reset
`InputConnection` to change keyboard layout.

Also, I add an API to emulate user interaction to write a test for
this issue.

Differential Revision: https://phabricator.services.mozilla.com/D240563