mobile/android/geckoview/src/androidTest/assets/web_extensions/test-support/TestSupportChild.sys.mjs
@@ -77,6 +77,17 @@ export class TestSupportChild extends GeckoViewActorChild {
       case "WaitForContentTransformsReceived": {
         return this.contentWindow.docShell.browserChild.contentTransformsReceived();
       }
+      case "SetHandlingUserInput": {
+        const { handlingUserInput } = aMsg.data;
+        this._handlingUserInput?.destruct();
+        this._handlingUserInput = null;
+
+        if (handlingUserInput) {
+          this._handlingUserInput =
+            this.contentWindow.windowUtils.setHandlingUserInput(true);
+        }
+        return Promise.resolve();
+      }
     }
     return null;
   }
