mobile/android/geckoview/src/androidTest/assets/web_extensions/test-support/test-api.js
@@ -260,6 +260,13 @@ this.test = class extends ExtensionAPI {
             })
           );
         },
+
+        async setHandlingUserInput(tabId, handlingUserInput) {
+          return getActorForTab(tabId, "TestSupport").sendQuery(
+            "SetHandlingUserInput",
+            { handlingUserInput }
+          );
+        },
       },
     };
   }
